[project]
authors = [{name = "pabroux", email = "pierre-alexandrebroux@live.fr"}]
name = "tmp"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "langgraph>=0.4.8,<0.5", "langsmith>=0.3.45,<0.4", "typing-extensions>=4.14.0,<5", "langchain[openai]>=0.3.25,<0.4", "langchain-tavily>=0.2.1,<0.3", "ruff>=0.12.1,<0.13", "langchain-community>=0.3.25,<0.4", "pypdf>=5.7.0,<6", "pydantic>=2.11.7,<3", "pyupgrade>=3.20.0,<4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]
